8154258: [TESTBUG] Various serviceability tests fail compilation
Replace sun.misc.Unsafe with jdk.internal.misc.Unsafe

Reviewed-by: chegar, kvn